--- a/bio2.html
+++ b/bio2.html
@@ -135,8 +135,115 @@
 </div>
 
 
+<div dir="rtl" style="text-align: right; font-family: 'Traditional Arabic', Arial, sans-serif; line-height: 1.9;">
+  <h2>القديس مرقوريوس أبو سيفين</h2>
+  <p>
+    لُقِّب بـ "أبو سيفين" لأن ملاك الرب ظهر له وأعطاه سيفًا بجانب سيفه العسكري، فكان هذا السيف السماوي سر قوته.
+  </p>
+
+  <h2>الميلاد والطفولة</h2>
+  <p>
+    وُلِد حوالي سنة 224 م من والدين وثنيين أطلقا عليه اسم "فيلوباتير" أي محب الآب. كان والده ياريس ضابطًا رومانيًا، أما فيلوباتير فقد كان جنديًا ناجحًا حتى صار قائدًا برتبة <i>بريميكيريوس</i>.
+  </p>
+
+  <h2>ياريس صيّاد الوحوش</h2>
+  <p>
+    كان ياريس والد القديس، وجدّه فيروس، يصطادان الوحوش الضارية كالأسود والنمور ويقدمانها للملوك والعظماء مقابل مكافآت. وذات يوم سقط وحشان غريبان في فخ، لكنهما تمكّنا من الإفلات وهاجماهما.  
+    افترس الوحشان فيروس، وسقط ياريس مغمىً عليه من هول المنظر. وعندما تقدما نحوه سمع صوتًا من السماء يقول له إن المسيح يسوع يقدر أن يذلل الوحوش ويجعلها وديعة مثل الحملان.  
+    ظهر له المسيح وقال:
+  </p>
+  <blockquote>
+    "يا ياريس، أنا هو الرب يسوع المسيح إلهك، الذي أحبك وأنقذك من فم الوحوش.  
+    أدعوك إلى نور الإيمان، وستكون إناءً مختارًا لي، وابنك سيكون شجرة مثمرة يرفع اسمي أمام الملوك والرؤساء.  
+    وسيتألم كثيرًا من أجلي، لكنني سأكون معك وأحميك."
+  </blockquote>
+  <p>
+    بعد ثلاثة أيام عاد ياريس إلى بيته وقص الرؤيا على زوجته، وكانت هي أيضًا قد سمعت الصوت نفسه يدعوها للإيمان.
+  </p>
+
+  <h2>معمودية ياريس وأسرته</h2>
+  <p>
+    تعمد ياريس وامرأته وابنه على يد الأسقف، وأُعطيت لهم أسماء جديدة:  
+    صار ياريس "نوح"، وزوجته "سفينا"، وفيلوباتير "مرقوريوس".  
+    ومنذ ذلك الحين عاشوا حياة مقدسة ملتزمين بوصايا الله ومكثرين من أعمال الرحمة.
+  </p>
+
+  <h2>قبض على نوح</h2>
+  <p>
+    وصلت أخبار إيمانهم إلى الوالي، فأمر أن يُطرحوا للوحوش. لكن الرب أغلق أفواه الوحوش فلم تمسّهم بسوء. اندهش الوالي وأطلق سراح نوح وجعله رئيسًا على الجيش.  
+    وفي إحدى الحروب أُسر نوح على يد البرابرة وبقي عندهم أكثر من سنة، حتى حظي برضا ملكهم وجعله واليًا، ثم عاد بتدبير الله إلى بيته ورقد بسلام بعد أن اجتمع بأسرته.
+  </p>
+
+  <h2>أبو سيفين</h2>
+  <p>
+    بعد وفاة نوح، عيّن الإمبراطور ديسيوس القديس مرقوريوس مكانه. ولما هاجم البرابرة الرومان، ارتاع الإمبراطور، أما مرقوريوس فشجّعه وتقدّم الجيش بنفسه.  
+    ظهر له ملاك الرب متلألئًا بالنور يحمل سيفًا لامعًا وقال:
+  </p>
+  <blockquote>
+    "مرقوريوس خادم يسوع المسيح، لا تخف. خذ هذا السيف وامضِ لمحاربة البرابرة.  
+    تذكّر إلهك عندما تنتصر.  
+    أنا الملاك ميخائيل أُرسلت من الله لأقويك. ستتألم كثيرًا من أجل اسم المسيح، لكنني سأكون معك حتى تكمل جهادك."
+  </blockquote>
+  <p>
+    فرح القديس وأخذ السيف السماوي، فامتلأ قوة إلهية. وبسيفين: سيفه الأرضي وسيف الملاك، انتصر على البرابرة وقتل ملكهم.
+  </p>
+
+  <h2>المرسوم الإمبراطوري</h2>
+  <p>
+    وبينما كان الله يمنح النصرة، أثار الشيطان قلب ديسيوس ليحارب الكنيسة، فأصدر منشورًا يقول فيه:
+  </p>
+  <blockquote>
+    "من ديسيوس إمبراطور روما: ليُعلم أن آلهة آبائنا قد منحتنا النصرة.  
+    لذلك على الجميع أن يقدّموا لها البخور.  
+    من يطيع يُكرم، ومن يعاند يُعذَّب حتى الموت."
+  </blockquote>
+  <p>
+    فأنكر البعض الإيمان، أما آخرون فثبتوا حتى السجن والاستشهاد.
+  </p>
+
+  <h2>رفض مرقوريوس</h2>
+  <p>
+    بعد الاحتفال بالنصر لاحظ الإمبراطور غياب مرقوريوس عن العبادة الوثنية. وعندما استدعاه خلع القديس ثيابه العسكرية وقال:  
+    <b>"لن أنكر إلهي يسوع المسيح أبدًا."</b>  
+    فغضب الإمبراطور وأمر بتعذيبه: شُق جسده بالسكاكين الحادة، ووُضعت على جانبيه جمرات مشتعلة.
+  </p>
+
+  <h2>عناية الله في وسط الآلام</h2>
+  <p>
+    ظهر له الملاك ميخائيل وشفاه من جراحه وأعطاه سلامًا. وفي اليوم التالي عندما رآه الإمبراطور سليمًا زاد تعذيبه، فوُضع على ألواح حديد مُحمَّاة، وعلّقوه من رجليه بحجر ثقيل. لكن الملاك كان يشفيه في كل مرة.  
+    وأخيرًا، خشي الإمبراطور ثورة الشعب، فأرسله إلى قيصرية في كبادوكية، حيث حُكم عليه بقطع رأسه سنة 250 م.  
+    وعند استشهاده أضاء جسده وحدثت معجزات كثيرة في موضع دفنه.
+  </p>
+
+  <h2>بعد استشهاده</h2>
+  <p>
+    بعد أن انتهى الاضطهاد، سمح الله بكشف جسده، فدفنه المؤمنون في قيصرية، ثم بنوا كنيسة باسمه.
+  </p>
+
+  <h2>القديس باسيليوس والإمبراطور يوليانوس</h2>
+  <p>
+    يُروى أن القديس باسيليوس الكبير طلب شفاعة أبو سيفين ضد يوليانوس الجاحد. وبينما كان يوليانوس يحارب الفرس، ظهر مرقوريوس كجندي من السماء وطعنه بحربة فقتله.  
+    وفي اللحظة نفسها ظهر أيقونته أمام باسيليوس وهو مصبوغ بالدم علامة على المعجزة.
+  </p>
+  <p>
+    واليوم يوجد دير باسمه في مصر القديمة (القاهرة)، يأتي إليه الآلاف طلبًا للبركة.
+  </p>
+
+  <h2>أعياده</h2>
+  <ul>
+    <li><b>عيد استشهاده:</b> 25 هاتور (4 ديسمبر / 5 ديسمبر في السنة الكبيسة)</li>
+    <li><b>نقل رفاته:</b> 9 بؤونه (16/17 يونيو)</li>
+    <li><b>تكريس كنيسته:</b> 25 أبيب (1/2 أغسطس)</li>
+  </ul>
+</div>
+
+
+
+
+    
     <a href="index.html">← Back to main page</a>
   </div>
 </body>
 </html>
+
 
