--- a/bio3.html
+++ b/bio3.html
@@ -42,96 +42,34 @@
 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Bethlehem.jpg" alt="Bethlehem">
    
-<p style="text-align: left; font-size: 18px;">
-The word "Abanoub" is derived from "Panoub", meaning "gold".  
-He was born in the village of Nehisa (Talkha district) in the 4th century to two devout parents who loved God: Makari and Mary. He lost both of them at the age of twelve and was sorrowful for many days.  
-The boy entered the church on a feast day and heard the priest encouraging the people to endure tribulation and persecution with joy, as Diocletian had begun his persecution of Christians. After communion, the boy returned home with the priest’s words echoing in his ears.  
-He knelt before God, asking for His help, and then set off for Samannoud, rejoicing in spirit, awaiting the heavenly crown.
-</p>
 
-<p style="text-align: left; font-size: 18px;">
-<strong>In Samannoud:</strong>  
-The young boy wandered through the city where he saw churches demolished and people cursing Christianity. He kept praying for God’s support. Then the Archangel Michael appeared to comfort him and instructed him to go to the governor the next morning to testify for Christ, assuring him that he would strengthen and heal him during the tortures he would endure.
-</p>
+    <h1>استشهاد أطفال بيت لحم (٣ طوبة)<br>Martyrdom of the Children of Bethlehem (3 Toba)</h1>
 
-<p style="text-align: left; font-size: 18px;">
-<strong>Before the governor:</strong>  
-Very early, young Abanoub went to the governor and spoke with courage and boldness. The governor was astonished at this young boy’s behavior and tried to win him over with many promises, but the boy continued to witness to the true faith.  
-The governor became furious and ordered him to be beaten on his stomach until his internal organs showed. Archangel Michael came and healed him.  
-The boy was thrown in prison where the other imprisoned Christians rejoiced in his presence, got to know him, and were comforted by him.  
-The next day, the governor killed around a thousand prisoners who received the crown of martyrdom on the 9th of Baramhat.  
-He then summoned Abanoub and ordered him to be tied by his feet to the mast of the ship the governor boarded en route to Athrib. Mockingly, he said, “Let’s see if Jesus will come to save him!”  
-They sailed until evening, then lowered the sails so the governor could eat and drink, but the cup hardened in his hand and he was paralyzed. The soldiers became like the blind.  
-The governor looked up and saw the child hanging, and the Archangel Michael came to wipe the blood from his nose and mouth, brought him down, laid him at the front of the ship, and vanished.  
-The governor begged the boy to pray to his God for healing, promising to believe along with his soldiers. Abanoub told him that God would heal him in Athrib. Indeed, he prayed for him and the governor was healed in front of the governor of Athrib. Many pagans in Athrib believed and some were martyred.
-</p>
+  <div class="section arabic">
+    <p>في مثل هذا اليوم من السنة الثانية لميلاد المسيح، قتل أطفال بيت لحم الشهداء وذلك أن هيرودس الملك لما استدعى المجوس سرا وتحقق منهم زمان ظهور النجم أرسلهم إلى بيت لحم ليفتشوا بالتدقيق عن الصبي وطلب منهم قائلا: إذا وجدتموه فعودوا وأخبروني لكي آتي أنا أيضًا وأسجد له. فذهبوا ووجدوا الصبي مع أمه فخروا وسجدوا ثم قدموا له هدايا: ذهبًا ولبانًا ومُرًا. وإذ كانوا متأهبين للرجوع إلى هيرودس أمرهم ملاك الرب في حلم بأن يعودوا إلى كورتهم في طريق آخر.</p>
 
-<p style="text-align: left; font-size: 18px;">
-<strong>In Athrib (Banha):</strong>  
-The governor of Athrib tortured the boy by whipping, throwing him in boiling oil, and burning him with fire and sulfur. But the Lord Jesus appeared to him with Archangels Michael and Gabriel, and healed him.  
-He was then tortured by having hot rods placed in his eyes, but the Lord healed him. The governor ordered his hands and feet cut off, but the Lord never left him.  
-Through all his tortures, Abanoub was a source of blessing to many souls who accepted faith in Jesus Christ, and many joyfully came forward to be martyred. The Lord continued sending His angels to comfort the boy!
-</p>
+    <p>وبعد ما انصرفوا إذا ملاك الرب قد ظهر ليوسف في حلم قائلا: قم خذ الصبي وأمه واهرب إلى مصر. وكن هناك حتى أقول لك، لأن هيرودس مزمع أن يطلب الصبي ليهلكه. فقام وأخذ الصبي وأمه ليلًا وانصرف إلى مصر، وكان هناك إلى وفاة هيرودس لكي يتم ما قيل من الرب بالنبي القائل: "من مصر دعوت ابني".</p>
 
-<p style="text-align: left; font-size: 18px;">
-<strong>To Alexandria:</strong>  
-When the governor saw the crowds accepting faith because of the boy, he sent him in chains to Alexandria.  
-There, he met a woman possessed by an evil spirit and cast it out even while bound, and she believed in Christ. One of the soldiers became enraged and killed her.  
-Before Armanius, the governor of Alexandria, the boy confessed his faith in Christ and endured further tortures. He was thrown into a pit of snakes and vipers, but the Lord protected him through Archangel Michael.  
-He came out of the pit followed by some snakes. One coiled around the governor’s neck and Abanoub saved him, amazing many who then believed and were martyred.  
-He endured more tortures until finally his head was cut off outside the city on a high rock. Before this, he joyfully stood and prayed, asking God to forgive his sins and receive his soul.  
-St. Julius of Akfahs came, wrapped his body in linen, and sent it to Nehisa, his birthplace, where he was buried. St. Julius also recorded his life story.
-</p>
+    <p>حينئذ لما رأى هيرودس أن المجوس قد سخروا به غضب جدًا فأرسل وقتل جميع الصبيان الذين في بيت لحم وفي كل تخومها من ابن سنتين فما دون بحسب الزمان الذي تحققه من المجوس. وقد أراد هيرودس بذلك أن يقتل الطفل يسوع في جملتهم. وقيل إن هيرودس احتال لتحقيق غايته الأثيمة بأن أرسل إلى تلك البلاد قائلا لهم: بحسب أمر قيصر يجب إحصاء كل أطفال بيت لحم وتخومها من ابن سنتين فما دون. فجمعوا مئة وأربعة وأربعين ألفًا من الأطفال على أيدي أمهاتهم، وقد ظن أن يسوع معهم. وحينئذ أرسل الملك قائدًا ومعه ألف من الجنود فذبحوا هؤلاء الأطفال على أحد الجبال في يوم واحد. وبهذا تم قول النبي إرميا: "صوت سمع في الرامة نوح وبكاء وعويل كثير. راحيل تبكي على أولادها ولا تريد أن تتعزى لأنهم ليسوا بموجودين". وذلك لأن بيت لحم منسوبة لراحيل وقد قُتلوا بجوار مدفنها الواقع قرب بيت لحم.</p>
 
-<p style="text-align: right; font-size: 18px; direction: rtl; unicode-bidi: isolate;">
-كلمة "أبانوب" مشتقة من "بي نوب" التي تعني "الذهب".  
-ولد بقرية نهيسة (مركز طلخا) في القرن الرابع، من أبوين تقيين محبين لله، هما مقارة ومريم، فقدهما وهو في الثانية عشرة من عمره، فصار حزينًا لأيام كثيرة.  
-دخل الصبي الكنيسة في أحد الأعياد ليجد الكاهن يحث الشعب على احتمال الضيق والاضطهاد بفرح، إذ كان دقلديانوس قد أثار الاضطهاد على المسيحيين. بعد التناول عاد الصبي الصغير إلى بيته وكلمات الأب الكاهن تدوي في أذنيه.  
-عندئذ ركع الصبي أمام الله يطلب عونه، ثم قام ليسير إلى سمنود وهو متهلل بالروح ينتظر الإكليل السماوي.
-</span>
-</p>
+    <p>وقد قال القديس يوحنا الإنجيلي: إنه رأى نفوس هؤلاء الأطفال وهم يصرخون قائلين: حتى متى أيها السيد القدوس والحق لا تقضي وتنتقم لدمائنا من الساكنين على الأرض. فأُعطي كل واحد ثيابًا بيضا، وقيل لهم أن يستريحوا زمانًا يسيرًا أيضًا حتى يكمل العبيد رفقاؤهم وإخوتهم أيضًا العتيدون أن يُقتلوا مثلهم. وقال إن التسبحة التي يسبح بها الأربعة الحيوانات والشيوخ لا يعرفها إلا المئة والأربعة والأربعون ألفًا هؤلاء الأبكار الذين لم يتنجسوا من النساء لأنهم أطهار، وهم مع الرب كل حين يمسح كل دمعة من عيونهم. فطوبى لهم وطوبى للبطون التي حملتهم. شفاعتهم تكون معنا ولربنا المجد دائمًا أبديًا آمين.</p>
+  </div>
 
-<p style="text-align: right; font-size: 18px; direction: rtl; unicode-bidi: isolate;">
-<strong>في سمنود:</strong>  
-أخذ الصبي الصغير يطوف المدينة التي وجد فيها الكنائس مهدمة والناس يشتمون في المسيحية... فكان يطلب من الله مساندته له، عندئذ أرسل له رئيس الملائكة ميخائيل الذي عزاه وأرشده أن ينطلق في الصباح إلى الوالي ليشهد لمسيحه، مؤكدًا له أنه سيقويه ويشفيه وسط العذابات التي يحتملها.
-</span>
-</p>
+  <div class="section english">
+    <p>On this day, in the second year after the birth of Christ, the children of Bethlehem, the holy martyrs, were slain. For King Herod, having secretly called the Magi and learned from them the exact time of the star’s appearance, sent them to Bethlehem, saying: “Go and search diligently for the young Child; and when you have found Him, bring me word, that I too may come and worship Him.” They went, found the Child with His mother, fell down and worshiped Him, and offered Him gifts: gold, frankincense, and myrrh. But being warned by an angel in a dream not to return to Herod, they departed to their own country by another way.</p>
 
-<p style="text-align: right; font-size: 18px; direction: rtl; unicode-bidi: isolate;">
-<strong>أمام الوالي:</strong>  
-بكَّر جدًا أبانوب الصبي، وانطلق إلى الوالي وصار يكلمه بجرأة وشجاعة، الذي دهش لتصرفات هذا الصبي الصغير، فصار يلاطفه بوعود كثيرة، أما الصبي فكان يشهد للإيمان الحق.  
-أغتاظ الوالي وأمر بضربه على بطنه حتى ظهرت أحشاؤه... وجاء رئيس الملائكة يشفيه.  
-أُلقي الصبي في السجن ففرح به المسيحيون المسجونون، وتعرفوا عليه، وتعزوا بسببه.  
-في اليوم التالي قتل الوالي من المسجونين حوالي ألفًا، ونالوا إكليل الشهادة في التاسع من برمهات.  
-استدعى الوالي الصبي أبانوب وأمر بربطه من قدميه على صاري المراكب التي استقلها الوالي متجهًا إلى أتريب، وفي تهكم قال: "لينظر هل يأتي يسوع ليخلصه؟!".  
-أقلعوا بالمركب مبحرين حتى المساء، ثم أرخوا القلع ليجلس الوالي ويأكل ويشرب، وإذا بالكأس تتحجر في يده ويصاب الوالي بنوع من الفالج، وأصبح الجند أشبه بعميان!  
-(ستجد المزيد عن هؤلاء القديسين هنا في موقع الأنبا تكلا في أقسام السير والسنكسار والتاريخ وأقوال الآباء).  
-فنظر الوالي إلى الطفل المعلق ليجد رئيس الملائكة يقترب منه ليمسح الدم النازل من أنفه وفمه، ثم ينزله ويتركه في مقدمة المركب ويختفي.  
-طلب الوالي من الصبي أن يصلي لإلهه ليشفيه فيؤمن هو وجنده... لكن أبانوب أجابه أن الله سيشفيه في أتريب... وبالفعل صلى عنه وشفاه باسم الرب أمام والي أتريب، وقد آمن عدد كبير من الوثنيين بأتريب واستشهد بعضهم.
-</span>
-</p>
+    <p>After they had departed, behold, an angel of the Lord appeared to Joseph in a dream, saying: “Arise, take the young Child and His mother, and flee to Egypt, and remain there until I bring you word; for Herod is about to seek the young Child to destroy Him.” Joseph arose, took the Child and His mother by night, and departed into Egypt, and remained there until the death of Herod, that it might be fulfilled which was spoken by the prophet: “Out of Egypt I called My Son.”</p>
 
-<p style="text-align: right; font-size: 18px; direction: rtl; unicode-bidi: isolate;">
-<strong>في أتريب (بنها):</strong>  
-قام والي أتريب بتعذيب الصبي بالجلد وبإلقائه في زيت مغلي وحرقه بنار وكبريت... فظهر له السيد المسيح ومعه رئيسا الملائكة ميخائيل وجبرائيل... وشفُي.  
-عاد فوضع سيخين محميين بالنار في عينيه والرب شفاه... فأمر ببتر يديه ورجليه، لكن الرب لم يتركه.  
-كان أبانوب في كل عذاباته سر بركة لنفوس كثيرة قبلت الإيمان بالسيد المسيح، وتقدم كثيرون للاستشهاد بفرح. وكان الرب يرسل ملائكته لتعزية الصبي.
-</span>
-</p>
+    <p>When Herod saw that he had been deceived by the Magi, he was exceedingly angry, and he sent and slew all the children in Bethlehem and in all its borders, from two years old and under, according to the time he had learned from the Magi. By this, Herod intended to kill the Child Jesus among them. It is said that Herod, to accomplish his wicked plan, commanded that all the children of Bethlehem and its borders, two years old and under, be numbered under pretense of Caesar’s decree. Thus, one hundred and forty-four thousand children were gathered in the arms of their mothers, and Herod thought that Jesus would be among them. Then he sent a commander with a thousand soldiers, and they slew these children on one mountain in a single day. Thus was fulfilled the prophecy of Jeremiah: “A voice was heard in Ramah, lamentation, weeping, and great mourning, Rachel weeping for her children, and she would not be comforted, because they are no more.” For Bethlehem is attributed to Rachel, and they were slain near her tomb, which is close to Bethlehem.</p>
 
-<p style="text-align: right; font-size: 18px; direction: rtl; unicode-bidi: isolate;">
-<span dir="rtl">
-<strong>إلى الإسكندرية:</strong>  
-إذ رأى الوالي الجموع التي تقبل الإيمان بسبب الصبي، أوفده إلى الإسكندرية مقيدًا بالسلاسل.  
-التقى بامرأة بها روح نجس أخرجه منها وهو مقيد اليدين، فآمنت بالسيد المسيح، فاغتاظ أحد الجنود وقتلها.  
-أمام أرمانيوس والي الإسكندرية اعترف الصبي بالسيد المسيح محتملًا عذابات أخرى، منها إلقاؤه في جب به ثعابين وحيّات جائعة، والرب حفظه بملاكه ميخائيل.  
-خرج الصبي من الجب وقد تبعته بعض الثعابين... فالتف أحدهم حول رقبة أرمانيوس والصبي أنقذه، الأمر الذي أدهش الكثيرين فقبلوا الإيمان واستشهدوا.  
-تعرض لعذابات أخرى، وأخيرًا قُطعت رأسه خارج المدينة على صخرة عالية بعد أن وقف بفرح يصلي طالبًا أن يغفر الله له خطاياه، ويتقبل روحه.  
-تقدم القديس يوليوس الأقفهصي وحمل جسده وكفنه وأرسله إلى نهيسة موطن ميلاده حيث دفن هناك... وقد كتب سيرته.
-</span>
-</p>
+    <p>Saint John the Evangelist said that he saw the souls of these children crying out: “How long, O Lord, holy and true, until You judge and avenge our blood on those who dwell on the earth?” And each was given a white robe, and it was said to them that they should rest for a little while longer, until both their fellow servants and brethren, who would be killed as they were, should be completed. He also said that the hymn sung by the four living creatures and the elders could only be learned by the one hundred and forty-four thousand, those firstborn who had not been defiled with women, for they are pure, and they are with the Lord always. He wipes away every tear from their eyes. Blessed are they, and blessed the wombs that bore them. May their intercessions be with us, and glory be to our Lord forever and ever. Amen.</p>
+  </div>
+
+</body>
+</html>
 
     <a href="index.html">← Back to main page</a>
   </div>
 </body>
 </html>
+
