--- a/bio3.html
+++ b/bio3.html
@@ -43,26 +43,37 @@
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Bethlehem.jpg" alt="Bethlehem">
    
 
-    <h1>استشهاد أطفال بيت لحم (٣ طوبة)<br>Martyrdom of the Children of Bethlehem (3 Toba)</h1>
-
-  <div class="section arabic">
-    <p>في مثل هذا اليوم من السنة الثانية لميلاد المسيح، قتل أطفال بيت لحم الشهداء وذلك أن هيرودس الملك لما استدعى المجوس سرا وتحقق منهم زمان ظهور النجم أرسلهم إلى بيت لحم ليفتشوا بالتدقيق عن الصبي وطلب منهم قائلا: إذا وجدتموه فعودوا وأخبروني لكي آتي أنا أيضًا وأسجد له. فذهبوا ووجدوا الصبي مع أمه فخروا وسجدوا ثم قدموا له هدايا: ذهبًا ولبانًا ومُرًا. وإذ كانوا متأهبين للرجوع إلى هيرودس أمرهم ملاك الرب في حلم بأن يعودوا إلى كورتهم في طريق آخر.</p>
-
-    <p>وبعد ما انصرفوا إذا ملاك الرب قد ظهر ليوسف في حلم قائلا: قم خذ الصبي وأمه واهرب إلى مصر. وكن هناك حتى أقول لك، لأن هيرودس مزمع أن يطلب الصبي ليهلكه. فقام وأخذ الصبي وأمه ليلًا وانصرف إلى مصر، وكان هناك إلى وفاة هيرودس لكي يتم ما قيل من الرب بالنبي القائل: "من مصر دعوت ابني".</p>
-
-    <p>حينئذ لما رأى هيرودس أن المجوس قد سخروا به غضب جدًا فأرسل وقتل جميع الصبيان الذين في بيت لحم وفي كل تخومها من ابن سنتين فما دون بحسب الزمان الذي تحققه من المجوس. وقد أراد هيرودس بذلك أن يقتل الطفل يسوع في جملتهم. وقيل إن هيرودس احتال لتحقيق غايته الأثيمة بأن أرسل إلى تلك البلاد قائلا لهم: بحسب أمر قيصر يجب إحصاء كل أطفال بيت لحم وتخومها من ابن سنتين فما دون. فجمعوا مئة وأربعة وأربعين ألفًا من الأطفال على أيدي أمهاتهم، وقد ظن أن يسوع معهم. وحينئذ أرسل الملك قائدًا ومعه ألف من الجنود فذبحوا هؤلاء الأطفال على أحد الجبال في يوم واحد. وبهذا تم قول النبي إرميا: "صوت سمع في الرامة نوح وبكاء وعويل كثير. راحيل تبكي على أولادها ولا تريد أن تتعزى لأنهم ليسوا بموجودين". وذلك لأن بيت لحم منسوبة لراحيل وقد قُتلوا بجوار مدفنها الواقع قرب بيت لحم.</p>
-
-    <p>وقد قال القديس يوحنا الإنجيلي: إنه رأى نفوس هؤلاء الأطفال وهم يصرخون قائلين: حتى متى أيها السيد القدوس والحق لا تقضي وتنتقم لدمائنا من الساكنين على الأرض. فأُعطي كل واحد ثيابًا بيضا، وقيل لهم أن يستريحوا زمانًا يسيرًا أيضًا حتى يكمل العبيد رفقاؤهم وإخوتهم أيضًا العتيدون أن يُقتلوا مثلهم. وقال إن التسبحة التي يسبح بها الأربعة الحيوانات والشيوخ لا يعرفها إلا المئة والأربعة والأربعون ألفًا هؤلاء الأبكار الذين لم يتنجسوا من النساء لأنهم أطهار، وهم مع الرب كل حين يمسح كل دمعة من عيونهم. فطوبى لهم وطوبى للبطون التي حملتهم. شفاعتهم تكون معنا ولربنا المجد دائمًا أبديًا آمين.</p>
+    <div class="english">
+    <h2>Martyrdom of the Children of Bethlehem (3 Toba)</h2>
+    <p>
+      On this day, in the second year of the birth of Christ, the children of Bethlehem were martyred. King Herod, after secretly calling the Magi and inquiring from them the exact time of the star’s appearance, sent them to Bethlehem, asking them to search carefully for the Child and report back so that he too might go and worship Him. The Magi went, found the Child with His mother, fell down, worshiped Him, and offered Him gifts: gold, frankincense, and myrrh. But as they were prepared to return to Herod, the angel of the Lord warned them in a dream not to return to him, and they departed to their country by another way.
+    </p>
+    <p>
+      After their departure, an angel of the Lord appeared to Joseph in a dream, saying: "Arise, take the Child and His mother, and flee to Egypt, and remain there until I tell you; for Herod will seek the Child to destroy Him." Joseph arose, took the Child and His mother by night, and departed to Egypt, and remained there until the death of Herod, that it might be fulfilled what the Lord had spoken through the prophet: "Out of Egypt I called My Son."
+    </p>
+    <p>
+      Then, when Herod saw that he had been deceived by the Magi, he became exceedingly angry. He sent and killed all the male children in Bethlehem and all its districts, from two years old and under, according to the time which he had carefully determined from the Magi. Herod intended by this to kill the Child Jesus among them. It is said that Herod schemed further by sending word to those regions, claiming that by order of Caesar all children of Bethlehem and its borders, from two years old and under, must be counted. Thus, one hundred and forty-four thousand children were gathered in the arms of their mothers, and Herod thought that Jesus would be among them. Then the king sent a commander with a thousand soldiers who slew all those children on a single mountain in one day. Thus was fulfilled the prophecy of Jeremiah: "A voice was heard in Ramah, lamentation, weeping, and great mourning, Rachel weeping for her children, and refusing to be comforted, because they are no more." For Bethlehem was attributed to Rachel, and the slaughter took place near her tomb, close to Bethlehem.
+    </p>
+    <p>
+      St. John the Evangelist said that he saw the souls of these children crying out: "How long, O Lord, holy and true, until You judge and avenge our blood on those who dwell on the earth?" Then each was given a white robe, and it was said to them that they should rest a little while longer, until both their fellow servants and their brethren, who would be killed as they were, should be completed. He also said that the hymn sung by the four living creatures and the elders is known only to the one hundred and forty-four thousand — those firstborn who were not defiled with women, for they are pure. They are always with the Lord, who wipes away every tear from their eyes. Blessed are they, and blessed are the wombs that carried them. May their intercessions be with us. Glory be to our Lord forever and ever. Amen.
+    </p>
   </div>
 
-  <div class="section english">
-    <p>On this day, in the second year after the birth of Christ, the children of Bethlehem, the holy martyrs, were slain. For King Herod, having secretly called the Magi and learned from them the exact time of the star’s appearance, sent them to Bethlehem, saying: “Go and search diligently for the young Child; and when you have found Him, bring me word, that I too may come and worship Him.” They went, found the Child with His mother, fell down and worshiped Him, and offered Him gifts: gold, frankincense, and myrrh. But being warned by an angel in a dream not to return to Herod, they departed to their own country by another way.</p>
-
-    <p>After they had departed, behold, an angel of the Lord appeared to Joseph in a dream, saying: “Arise, take the young Child and His mother, and flee to Egypt, and remain there until I bring you word; for Herod is about to seek the young Child to destroy Him.” Joseph arose, took the Child and His mother by night, and departed into Egypt, and remained there until the death of Herod, that it might be fulfilled which was spoken by the prophet: “Out of Egypt I called My Son.”</p>
-
-    <p>When Herod saw that he had been deceived by the Magi, he was exceedingly angry, and he sent and slew all the children in Bethlehem and in all its borders, from two years old and under, according to the time he had learned from the Magi. By this, Herod intended to kill the Child Jesus among them. It is said that Herod, to accomplish his wicked plan, commanded that all the children of Bethlehem and its borders, two years old and under, be numbered under pretense of Caesar’s decree. Thus, one hundred and forty-four thousand children were gathered in the arms of their mothers, and Herod thought that Jesus would be among them. Then he sent a commander with a thousand soldiers, and they slew these children on one mountain in a single day. Thus was fulfilled the prophecy of Jeremiah: “A voice was heard in Ramah, lamentation, weeping, and great mourning, Rachel weeping for her children, and she would not be comforted, because they are no more.” For Bethlehem is attributed to Rachel, and they were slain near her tomb, which is close to Bethlehem.</p>
-
-    <p>Saint John the Evangelist said that he saw the souls of these children crying out: “How long, O Lord, holy and true, until You judge and avenge our blood on those who dwell on the earth?” And each was given a white robe, and it was said to them that they should rest for a little while longer, until both their fellow servants and brethren, who would be killed as they were, should be completed. He also said that the hymn sung by the four living creatures and the elders could only be learned by the one hundred and forty-four thousand, those firstborn who had not been defiled with women, for they are pure, and they are with the Lord always. He wipes away every tear from their eyes. Blessed are they, and blessed the wombs that bore them. May their intercessions be with us, and glory be to our Lord forever and ever. Amen.</p>
+    
+   <div class="arabic">
+    <h2>استشهاد أطفال بيت لحم (٣ طوبة)</h2>
+    <p>
+      في مثل هذا اليوم من السنة الثانية لميلاد المسيح، قتل أطفال بيت لحم الشهداء وذلك أن هيرودس الملك لما استدعى المجوس سرا وتحقق منهم زمان ظهور النجم أرسلهم إلى بيت لحم ليفتشوا بالتدقيق عن الصبي وطلب منهم قائلا إذا وجدتموه فعودوا وأخبروني لكي آتي أنا أيضًا وأسجد له. فذهبوا ووجدوا الصبي مع أمه فخروا وسجدوا ثم قدموا له هدايا ذهبًا ولبانًا ومُرًّا. وإذ كانوا متأهبين للرجوع إلى هيرودس أمرهم ملاك الرب في حلم بأن يعودوا إلى كورتهم في طريق آخر.
+    </p>
+    <p>
+      وبعد ما انصرفوا إذا ملاك الرب قد ظهر ليوسف في حلم قائلا: قم خذ الصبي وأمه واهرب إلى مصر. وكن هناك حتى أقول لك. لأن هيرودس مزمع أن يطلب الصبي ليهلكه. فقام وأخذ الصبي وأمه ليلًا وانصرف إلى مصر. وكان هناك إلى وفاة هيرودس لكي يتم ما قيل من الرب بالنبي القائل: "من مصر دعوت ابني".
+    </p>
+    <p>
+      حينئذ لما رأى هيرودس أن المجوس قد سخروا به غضب جدًا، فأرسل وقتل جميع الصبيان الذين في بيت لحم وفي كل تخومها من ابن سنتين فما دون، بحسب الزمان الذي تحققه من المجوس. وقد أراد هيرودس بذلك أن يقتل الطفل يسوع في جملتهم. وقيل أن هيرودس احتال لتحقيق غايته الأثيمة بأن أرسل إلى تلك البلاد قائلا لهم: بحسب أمر قيصر يجب إحصاء كل أطفال بيت لحم وتخومها من ابن سنتين فما دون. فجمعوا مئة وأربعة وأربعين ألفًا من الأطفال على أيدي أمهاتهم، وقد ظن أن يسوع معهم. وحينئذ أرسل الملك قائدًا ومعه ألف من الجنود فذبحوا هؤلاء الأطفال على أحد الجبال في يوم واحد. وبهذا تم قول النبي إرميا: "صوت سُمع في الرامة نوح وبكاء وعويل كثير. راحيل تبكي على أولادها ولا تريد أن تتعزى لأنهم ليسوا بموجودين". وذلك لأن بيت لحم منسوبة لراحيل وقد قتلوا بجوار مدفنها الواقع قرب بيت لحم.
+    </p>
+    <p>
+      وقد قال القديس يوحنا الإنجيلي: إنه رأى نفوس هؤلاء الأطفال وهم يصرخون قائلين: "حتى متى أيها السيد القدوس والحق لا تقضي وتنتقم لدمائنا من الساكنين على الأرض؟" فأُعطي كل واحد ثيابًا بيضًا، وقيل لهم أن يستريحوا زمانًا يسيرًا أيضًا حتى يكمل العبيد رفقاؤهم وإخوتهم أيضًا العتيدون أن يقتلوا مثلهم. وقال إن التسبحة التي يسبح بها الأربعة الحيوانات والشيوخ لا يعرفها إلا المئة والأربعة والأربعون ألفًا هؤلاء الأبكار الذين لم يتنجسوا من النساء لأنهم أطهار. وهم مع الرب كل حين يمسح كل دمعة من عيونهم. فطوبى لهم وطوبى للبطون التي حملتهم. شفاعتهم تكون معنا، ولربنا المجد دائمًا أبديًا آمين.
+    </p>
   </div>
 
 </body>
@@ -72,4 +83,5 @@
   </div>
 </body>
 </html>
+
 
