--- a/bio3.html
+++ b/bio3.html
@@ -43,7 +43,7 @@
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Bethlehem.jpg" alt="Bethlehem">
    
 
-    <div class="english">
+       <div dir="ltr" style="text-align: left; font-family: Arial, sans-serif; line-height: 1.8;">
     <p>
       On this day, in the second year of the birth of Christ, the children of Bethlehem were martyred. King Herod, after secretly calling the Magi and inquiring from them the exact time of the star’s appearance, sent them to Bethlehem, asking them to search carefully for the Child and report back so that he too might go and worship Him. The Magi went, found the Child with His mother, fell down, worshiped Him, and offered Him gifts: gold, frankincense, and myrrh. But as they were prepared to return to Herod, the angel of the Lord warned them in a dream not to return to him, and they departed to their country by another way.
     </p>
@@ -59,8 +59,7 @@
   </div>
 
     
-   <div class="arabic">
-    <p>
+<div dir="rtl" style="text-align: right; font-family: 'Traditional Arabic', Arial, sans-serif; line-height: 1.9;">    <p>
       في مثل هذا اليوم من السنة الثانية لميلاد المسيح، قتل أطفال بيت لحم الشهداء وذلك أن هيرودس الملك لما استدعى المجوس سرا وتحقق منهم زمان ظهور النجم أرسلهم إلى بيت لحم ليفتشوا بالتدقيق عن الصبي وطلب منهم قائلا إذا وجدتموه فعودوا وأخبروني لكي آتي أنا أيضًا وأسجد له. فذهبوا ووجدوا الصبي مع أمه فخروا وسجدوا ثم قدموا له هدايا ذهبًا ولبانًا ومُرًّا. وإذ كانوا متأهبين للرجوع إلى هيرودس أمرهم ملاك الرب في حلم بأن يعودوا إلى كورتهم في طريق آخر.
     </p>
     <p>
@@ -81,6 +80,7 @@
   </div>
 </body>
 </html>
+
 
 
 
