--- a/bio1.html
+++ b/bio1.html
@@ -40,7 +40,7 @@
     <h1>   El Fayoum Martyrs </h1>
     <h1>   (8 Jan / 29 Kiahk) </h1>
     <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Fayoum.jpg" alt="Fayoum">
-<div dir="ltr" style="text-align: left; font-family: Arial, sans-serif; line-height: 1.8;">
+<div dir="ltr" style="text-align: left; font-size: 18px; font-family: Arial, sans-serif; line-height: 1.8;">        
   <p>
     Their relics were discovered during a project at the Monastery of Archangel Gabriel in Fayoum, in its southern part, on July 28, 1991. While digging, the Fayoum Martyrs' bodies were found, and their clothes were covered with crosses. They were examined by His Grace Bishop Abram, Bishop of Fayoum and head of the monastery, who found with them the monastic attire, specifically the leather belt used by monks, which was divided into pieces due to the passage of time. These bodies belonged to monks who lived in past centuries in this wilderness. On August 25, 1991, old coffins made of palm leaves were found. In one of them, there were two bodies: one with a deformed and charred head and rings in his hand, and the other without a head — evidence that they were martyr monks. They are now placed in specially made coffins inside a shrine in the monastery.
   </p>
@@ -132,7 +132,7 @@
   </ul>
 </div>
 
-<div dir="rtl" style="text-align: right; font-family: 'Amiri', serif; line-height: 1.8;">
+<div dir="rtl" style="text-align: right; font-size: 18px; font-family: 'Amiri', serif; line-height: 1.8;">
   <p>
     تم العثور على رفاتهم أثناء عمل مشروع لدير الملاك غبريال بالفيوم في الجزء القبلي منه في يوم 28 يوليو 1991 م. وأثناء الحفر وُجِدَت هذه الأجساد Fayoum Martyrs، وكانت ملابسها مُغطاة بالصلبان.. وتم فحصهم بيد نيافة الأنبا ابرآم أسقف الفيوم ورئيس الدير، فَوُجِدَ معهم الزى الرهباني؛ وبالتحديد المنطقة الجلد التي يستخدمها الراهب، وكانت مُقَسَّمة إلى قطع لمرور الزمن عليها. وهؤلاء الأجساد خاصة بآبائنا الرهبان الذين عاشوا في القرون الماضية بهذه البرية، ووُجِدَ يوم 25 أغسطس 1991 م. صناديق قديمة من شرائح النخيل، وُجِدَ في أحداها جسدين: أحداهما برأس به تشوهات ومتفحم وبيده حلقات، والآخر بدون رأس، وهذا دليل على أنهم رهبان شهداء. وهم الآن في صناديق صُنِعَت خصيصاً لهم موضوعة على مقصورة بالدير.
   </p>
@@ -229,6 +229,7 @@
   </div>
 </body>
 </html>
+
 
 
 
