--- a/bio2.html
+++ b/bio2.html
@@ -42,8 +42,7 @@
 
     <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Sefin.jpg" alt="Sefin">
   
-    <div dir="ltr" style="text-align: left; font-family: Arial, sans-serif; line-height: 1.8;">
-  <h2>St. Mercurius (Abu Sefein)</h2>
+<div dir="ltr" style="text-align: left; font-size: 18px; font-family: Arial, sans-serif; line-height: 1.8;">          <h2>St. Mercurius (Abu Sefein)</h2>
   <p>
     He was called “Abu Sefein” (the one with two swords) because the Angel of the Lord appeared to him and gave him a sword alongside his military sword. This heavenly sword was the secret of his strength.
   </p>
@@ -135,8 +134,7 @@
 </div>
 
 
-<div dir="rtl" style="text-align: right; font-family: 'Traditional Arabic', Arial, sans-serif; line-height: 1.9;">
-  <h2>القديس مرقوريوس أبو سيفين</h2>
+<div dir="rtl" style="text-align: right; font-size: 18px; font-family: 'Amiri', serif; line-height: 1.8;">  <h2>القديس مرقوريوس أبو سيفين</h2>
   <p>
     لُقِّب بـ "أبو سيفين" لأن ملاك الرب ظهر له وأعطاه سيفًا بجانب سيفه العسكري، فكان هذا السيف السماوي سر قوته.
   </p>
@@ -245,5 +243,6 @@
   </div>
 </body>
 </html>
+
 
 
