--- a/bio4.html
+++ b/bio4.html
@@ -41,34 +41,104 @@
    <h1> (14 May/ 6 Bashance)</h1>
  
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Dafrawi.jpg" alt="Dafrawi">
-    <p style="text-align: left; font-size: 18px;">
-At dawn on the 29th of Kiahk, 303 A.D., the vast Church of Soter (the Savior) was packed with crowds of Christian worshippers who had spent the previous night in hymns and prayers in preparation for the Christmas liturgy, which began in the third watch of the night.
-Their beloved shepherd, Bishop of Akhmim, Anba Odogius, was not with them that feast, as he had recently departed. News had reached them about the arrival of the fierce governor "Arianus," the governor of Ansena, along with his soldiers to their city. So, secretly, Anba Abadion (who had previously been arrested) came to pray with them.
-After the liturgy ended at dawn, the governor went to the pagan temple and, provoked by the pagan priests, was filled with hatred toward the Christians. He and his soldiers went to the church and found thousands of Christians gathered in prayer. Anba Agfa and Anba Wanin came out to meet him and spoke with him. When he asked why all those people were gathered, they told him that it was the Feast of the Nativity of Christ.
-This enraged him even more, and he killed both of them — they became the first martyrs of Akhmim.
-Then the governor and his soldiers called on the Christians to quickly bow down to the idols. But the people, bravely and defiantly, declared their faith in Jesus Christ and their readiness to die for Him. Seeing their steadfastness, the governor ordered the priests to be killed — among them the wise priest Askonda, who had led 70 pagan priests to faith and baptized them. The priests were martyred, along with the repentant pagan priests, then the deacons, and many of the people — numbering several thousands!
-Seeing their determination and eagerness to receive the crown of martyrdom, the governor set up instruments of torture.
-For three consecutive days, torture and martyrdom took place in Akhmim, and the number of martyrs during this period reached 8,140 — on the 29th and 30th of Kiahk, and the 1st of Tobe.
-Their relics are kept in the Church of Anba Takla in Alexandria.
-May their holy prayers be with us all, and glory be to our Lord forever, Amen
-      .</p>
+    
+
+<div dir="ltr" style="text-align: left; font-size: 18px; font-family: Arial, sans-serif; line-height: 1.8;">          <h2>Early Life</h2>
+  <p>
+    Saint Isaac was born in the town of Defra, near Tanta, and lived a life of holy devotion.
+    When Emperor Diocletian stirred persecution, Saint Isaac had reached the age of twenty-five.
+    While sleeping in the field with the harvesters, he saw an angel of the Lord saying to him:
+    "Peace to you, Isaac, godly and righteous man; why are you sleeping while the struggle continues?!"
+    Then he was shown a crown, and his heart was inflamed with the desire for the blessing of martyrdom.
+  </p>
+  <p>
+    When dawn came, the young man bade farewell to his parents and set out for the city of Towa,
+    part of Beba in Upper Egypt. They tried to stop him from leaving. At midnight, the whole house
+    was illuminated with a brilliant light, then the angel appeared and encouraged Isaac to go forth
+    and fulfill the desire of his heart. Immediately, he left his city and went to Towa.
+  </p>
+
+  <h2>Martyrdom</h2>
+  <p>
+    Saint Isaac met the governor of the city, boldly declaring his faith. The governor threatened him
+    and ordered him imprisoned until the return of Nicus. Isaac was taken with a soldier to the prison,
+    and along the way, he met a blind man. He prayed to God for him, and his eyes were opened.
+    The soldier believed immediately, and upon the governor’s return, confessed his faith and offered his neck
+    to the sword, joyfully receiving the crown of martyrdom.
+  </p>
+  <p>
+    The governor, enraged, decided to torment Isaac with every kind of torture. He sent him to Kkelyanos,
+    governor of Bihansa, to carry out the punishments. While on the ship, Isaac requested a little water
+    from a sailor, and after drinking, he poured the remaining water on the blind sailor’s eyes, restoring his sight.
+    (More about these saints can be found on the St. Anba Takla website in the sections of Hagiography and the sayings of the Fathers.)
+  </p>
+  <p>
+    Saint Isaac then faced the governor of Bihansa, who first tried to win him over with kindness to abandon his faith,
+    but failing, began torturing him, while God continued to heal him.
+  </p>
+  <p>
+    It happened that Ariana roamed the region, harassing Christians and inflicting torture.
+    When he met Kkelyanos, the latter told him about Isaac of Defra and recounted the events.
+    Ariana then took over, torturing Isaac further. When this also failed, he sent him to the city of Towa,
+    where Isaac was beheaded and received the crown of martyrdom. Many miracles occurred from his body.
+  </p>
+  <p>
+    Some faithful carried his body back to his hometown of Defra, where it was buried with great honor.
+    They built a church in his name. The Coptic Church celebrates his martyrdom on the 6th of Bashans
+    and the consecration of his church on the 6th of Toba.
+  </p>
+</div>
+
+
 
     
-<p style="text-align: right; font-size: 18px; direction: rtl; unicode-bidi: isolate;">
-<span dir="rtl">
-في فجر يوم التاسع والعشرين من شهر كيهك سنة 303، وكانت جماهير الشعب المسيحيين تزدحم بهم كنيسة سوتير (المُخَلِّص) الواسِعة، وقد قضوا الليلة السابقة في التسابيح والصلوات استعدادًا لصلاة قداس عيد الميلاد، والذي كان يبدأ في الهزيع الثالث من الليل. ولم يكن معهم في ذلك العيد راعيهم المحبوب أسقف أخميم الأنبا أوضاجيوس؛ لأنه كان قد تنيَّح منذ فترة قريبة. وقد تطايرت إليهم أنباء عن وصول الوالي الشَّرِس "إريانوس" والي أنصنا مع جنوده إلى مدينتهم.. فذهب إليهم الأنبا أباديون (سِرًّا لأنه كان قد قُبِضَ عليه) ليصلي معهم.
+<div dir="rtl" style="text-align: right; font-size: 18px; font-family: 'Amiri', serif; line-height: 1.8;">  <h2>نشأته</h2>
+  <p>
+    ولد القديس إسحق ببلدة دفرا، التابعة لطنطا، وعاش في حياة تقوية مقدسة.
+    لما أثار الإمبراطور دقلديانوس الاضطهاد كان القديس قد بلغ الخامسة والعشرين من عمره،
+    وإذ كان نائمًا في الحقل مع الحصادين رأى ملاك الرب يقول له: "سلام لك يا إسحق رجل الله التقي؛
+    لماذا أنت نائم والجهاد قائم؟!"، ثم أراه إكليلًا فالتهب قلبه بنوال بركة الاستشهاد.
+  </p>
+  <p>
+    إذ لاح النهار ودّع الشاب والديه لينطلق إلى مدينة طوه، تابعة لببا بصعيد مصر،
+    فمنعاه من الخروج. وفي منتصف الليل أضاء البيت كله بنور فائق،
+    ثم ظهر الملاك وشجع إسحق لينطلق ويتمم شوق قلبه، وفي الحال ترك مدينته وانطلق إلى طوه.
+  </p>
 
-وبعد انتهاء الصلاة في فجر ذلك اليوم، ذهب الوالي إلى معبد الأصنام، وامتلأ حقدًا على المسيحيين بسبب كهنة الأصنام.. فقام مع جنوده وذهبوا إلى الكنيسة ورأوا ألوف المسيحيين مجتمعين للصلاة.. فخرج إليه الأنبا أجفا والأنبا وانين وتحدَّثا معه وسألهُما عن سبب اجتماع كل هؤلاء.. فأخبروه بأن اليوم هو عيد ميلاد السيد المسيح.. فإزداد غيظًا، وقتلهُما، وكانا باكورة شهداء أخميم.
-ثم دعا الوالي وجنده المسيحيين أن يُسْرِعوا بالسجود للأصنام.. وفي مواجهة وتحدِّ شُجاع وقف الشعب يعترفون بإيمانهم بالسيد المسيح، وأنهم مستعدون أن يموتوا من أجله.. ولما رأى الوالي ثباتهم، أمر بأن يُقْتَل الكهنة.. (ومنهم الكاهن الحكيم أسكوندا، الذي جذب إلى الإيمان 70 من كهنة الأصنام وعمَّدهم). فاستشهد الكهنة، وهؤلاء الكهنة التائبين، ثم تلاهم الشمامسة.. وكثير من الشعب.. وكانوا عدة ألوف!
-ولما رأى الوالي ثباتهم وتسارعهم لنوال إكليل الشهادة.. نصب آلات التعذيب.
-وعلى مدى ثلاثة أيام مُتَّصِلة. دار التعذيب والاستشهاد في أخميم.. وبلغ عدد الشهداء في هذه الفترة 8140 شهيدًا!!  في الفترة من 29 كيهك، و30 كيهك، وحتى 1 طوبة.
-ويوجد رفاتهم هنا في كنيسة الأنبا تكلا في الإسكندرية.
-بركة صلواتهم تكون مع جميعنا، ولربنا المجد الدائم إلى الأبد، آمين..
-</span>
-</p>
+  <h2>استشهاده</h2>
+  <p>
+    التقى القديس إسحق بوالي المدينة. حيث أعلن إيمانه بقوة وشجاعة، فهدده وأمر بحبسه حتى يعود من نقيوس.
+    انطلق إسحق مع أحد الجنود من أمام الوالي إلى الحبس، وفي الطريق التقى برجل أعمى،
+    صلى إلى الله من أجله فانفتحت عيناه، وللوقت آمن الجندي نفسه، وعند عودة الوالي اعترف الجندي بالإيمان
+    وسلّم رقبته للسيف لينال إكليل الشهادة بفرح.
+  </p>
+  <p>
+    اغتاظ الوالي وصمم أن يذيقه كل أنواع العذابات، فأرسله إلى ككليانوس والي البهنسا ليقوم بالتعذيب.
+    وإذ كان بالسفينة مقيدًا طلب من أحد النوتية قليل ماء فأعطاه، وإذ شرب أخذ القليل من الماء المتبقي
+    وصلى عليه وسكبه على عين الرجل النوتي التي كانت عمياء فانفتحت وأبصر بها كما بعينه الأخرى.
+    (ستجد المزيد عن هؤلاء القديسين هنا في موقع الأنبا تكلا في أقسام السير والسنكسار والتاريخ وأقوال الآباء).
+  </p>
+  <p>
+    التقى القديس بوالي البهنسا، الذي بدأ أولًا بملاطفته ليستميله لترك إيمانه فلم يفلح،
+    وعندئذ صار يعذبه، وكان الرب يشفيه.
+  </p>
+  <p>
+    حدث أن كان أريانا يجول في البلاد يتشفى بمضايقة المسيحيين وتعذيبهم،
+    وإذ التقى بككليانوس أخبره الأخير عن أمر إسحق الدفراوي، وروى له ما حدث معه،
+    فاستلمه منه ليقوم هو أيضًا بدوره في التعذيب، وأخذه معه إلى أنصنا وصار يعذبه،
+    وإذ لم يفلح أرسله إلى مدينة طوه حيث قطعت رأسه ونال إكليل الاستشهاد، وقد ظهر من جسده عجائب كثيرة.
+  </p>
+  <p>
+    جاء بعض المؤمنين وحملوا جسده، وأتوا به إلى بلده دفرا، ودفنوه هناك بإكرام عظيم،
+    وبنوا كنيسة باسمه. تعيِّد الكنيسة القبطية بعيد استشهاده في 6 بشنس،
+    وعيد تكريس كنيسته في 6 طوبة.
+  </p>
+</div>
+
 
 
     <a href="index.html">← Back to main page</a>
   </div>
 </body>
 </html>
+
